WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249695
[IFC][hanging punctuation] Line::HangingContent should take "StopOrComma" trailing type
https://bugs.webkit.org/show_bug.cgi?id=249695
Summary
[IFC][hanging punctuation] Line::HangingContent should take "StopOrComma" tra...
zalan
Reported
2022-12-20 20:45:39 PST
ssia
Attachments
Patch
(8.48 KB, patch)
2022-12-20 20:49 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(8.49 KB, patch)
2022-12-20 21:22 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2022-12-20 20:49:16 PST
Created
attachment 464133
[details]
Patch
zalan
Comment 2
2022-12-20 21:22:55 PST
Created
attachment 464137
[details]
Patch
EWS
Comment 3
2022-12-21 06:48:46 PST
Committed
258188@main
(8be5cfd53e57): <
https://commits.webkit.org/258188@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464137
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-12-21 06:49:28 PST
<
rdar://problem/103597041
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug