[IFC][hanging punctuation] Line::HangingContent should take "StopOrComma" trailing type https://bugs.webkit.org/show_bug.cgi?id=249695

Reviewed by Antti Koivisto.

This is in preparation for supporting "hanging-punctuation: allow-end", where "A stop or comma at the end of a line conditionally hangs".
(This patch also refactors Line::handleTrailingHangingContent to make it read closer to the spec language.)

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::handleTrailingHangingContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::HangingContent::isTrailingContentWhitespace const):
(WebCore::Layout::Line::HangingContent::isTrailingContentStopOrComa const):
(WebCore::Layout::Line::HangingContent::setTrailingStopOrComa):
(WebCore::Layout::Line::HangingContent::resetTrailingPunctuation):

Canonical link: https://commits.webkit.org/258188@main